# mirror-mind

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: test.yml
.pi/extensions/: mirror-logger.ts
.pi/skills/mm-backup/: SKILL.md
.pi/skills/mm-consult/: SKILL.md  run.py
.pi/skills/mm-conversations/: SKILL.md  run.py
.pi/skills/mm-extract/: SKILL.md
.pi/skills/mm-help/: SKILL.md
.pi/skills/mm-journal/: SKILL.md  run.py
.pi/skills/mm-journey/: SKILL.md  run.py
.pi/skills/mm-journeys/: SKILL.md  run.py
.pi/skills/mm-memories/: SKILL.md  run.py
.pi/skills/mm-mirror/: SKILL.md  run.py
.pi/skills/mm-mute/: SKILL.md
.pi/skills/mm-new/: SKILL.md
.pi/skills/mm-recall/: SKILL.md  run.py
.pi/skills/mm-save/: SKILL.md  run.py
.pi/skills/mm-seed/: SKILL.md
.pi/skills/mm-tasks/: SKILL.md  run.py
.pi/skills/mm-week/: SKILL.md  run.py
economy/: __init__.py  client.py  db.py  models.py  reports.py  store.py
economy/importers/: __init__.py  itau_csv_parser.py  ofx_parser.py
memoria/: __init__.py  __main__.py  backup.py  cli.py  client.py  config.py  conversation_logger.py  db.py  embeddings.py  extraction.py  llm_router.py  models.py  search.py  seed.py  session_intelligence.py  store.py  tasks.py  transcript_export.py
memoria/skills/: consult.py  conversations.py  journal.py  journey.py  journeys.py  memories.py  mirror.py  recall.py  save.py  tasks.py  week.py
src/xdigest/: __init__.py  analyze.py  cli.py  config.py  fetch.py  render.py  send.py  state.py  template_reference.html  triage.py
tests/: conftest.py
tests/integration/memoria/: test_client.py
tests/unit/economy/: test_reports.py
tests/unit/memoria/cli/: test_conversation_logger.py  test_tasks.py
tests/unit/memoria/db/: test_migrations.py  test_schema.py
tests/unit/memoria/intelligence/: test_embeddings.py  test_extraction.py  test_search.py
tests/unit/memoria/storage/: test_store.py
tests/xdigest/: test_analyze.py  test_cli.py  test_config.py  test_fetch.py  test_render.py  test_send.py  test_state.py  test_triage.py
users/me/: README.md
users/me/ego/: behavior.yaml  identity.yaml
users/me/organization/: identity.yaml  principles.yaml
users/me/personas/: _template.yaml
users/me/self/: config.yaml  soul.yaml
users/me/travessias/: _template.yaml
users/me/user/: identity.yaml
