[project]
name = "memoria"
version = "0.1.0"
description = "Sistema de memória de longo prazo para o Espelho Soberano"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "mychatarchive @ git+https://github.com/henriquebastos/mychatarchive.git",  # TODO: publish to PyPI
    "reportlab>=4.4.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[project.scripts]
memoria = "memoria.cli:main"
xdigest = "xdigest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["memoria", "src/xdigest"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["memoria", "economy", "xdigest"]
branch = true
omit = [
    "memoria/__main__.py",
    "memoria/backup.py",
    "memoria/seed.py",
    "memoria/conversation_logger.py",
    "memoria/session_intelligence.py",
    "memoria/transcript_export.py",
    "memoria/llm_router.py",
    "economy/importers/*",
    "economy/client.py",
    "economy/db.py",
    "economy/store.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 40
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    ".pi",
    "session-intelligence",
    "research",
    "tools",
    "conversas",
    "travessias",
    "personas",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
